--- a/src/Design/splash.css
+++ b/src/Design/splash.css
@@ -34,7 +34,7 @@
   height: 30px;
   font-family: var(--font-pixel);
   padding: 20px;
-  font-size: 25px;
+  font-size: 1.5625rem;
   display: flex;
   justify-content: center;
   align-items: center;
